Fixed error on scrollbar and added bottom license test

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -5,12 +5,18 @@
 @import "config";
 
 body {
+	min-height: 600px;
+	width: 100%;
+	margin-left: calc(50vw - (100% / 2));
+	overflow-x: hidden;
 	color: $color-white;
 	background: #1C1C1C;
 	font-family: 'Inconsolata', ;
 	font-size: 100%;
 	font-weight: 400;
+	position: relative;
 }
+
 h1 {
 	margin-bottom: 5px;
 }
@@ -56,6 +62,14 @@ blockquote {
   padding: 0.5em 10px;
 }
 
+.license{
+ 	position: absolute;
+	bottom: 0;
+	width: 700px;
+	text-align: center;
+	font-size: 12px;
+}
+
 .header img {
   width: 100px;
   height: 100px;
@@ -77,7 +91,7 @@ blockquote {
 	text-decoration: none;
 }
 
-.header ul a, .blog ul a, #post a, .about a {
+.header ul a, .blog ul a, #post a, .about a, .post__back {
   color: $color-link;
   text-decoration: none;
   &:visited {
